Bug 12959 - backupkey uses variables with wrong scope
Summary: backupkey uses variables with wrong scope
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.7.0rc3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-10 11:26 UTC by Andreas Schneider
Modified: 2017-11-01 08:44 UTC (History)
2 users (show)

See Also:


Attachments
patch for 4.7 (1.90 KB, patch)
2017-08-14 06:59 UTC, Andreas Schneider
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2017-08-10 11:26:56 UTC
backupkey uses variables with wrong scope.


Patch will follow.
Comment 1 Andreas Schneider 2017-08-14 06:59:12 UTC
Created attachment 13468 [details]
patch for 4.7
Comment 2 Ralph Böhme 2017-10-14 06:49:27 UTC
Reassigning to Karolin for inclusion in 4.7.
Comment 3 Karolin Seeger 2017-10-24 08:06:02 UTC
(In reply to Ralph Böhme from comment #2)
Pushed to autobuild-v4-7-test.
Comment 4 Karolin Seeger 2017-11-01 08:44:57 UTC
Pushed to v4-7-test.
Closing out bug report.

Thanks!